maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:6: error: reassignment to val
      turn=turn+1
          ^PledgeMaze:11: error: reassignment to val
              turn=turn-1
                  ^PledgeMaze:16: error: reassignment to val
                turn=turn - 1
                    ^PledgeMaze:21: error: reassignment to val
                    turn= turn - 1 ; return turn
                        ^